--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -7,6 +7,11 @@ URL: https://github.com/smwoodman/swfscDAS
 BugReports: https://github.com/smwoodman/swfscAirDAS/issues
 Depends: R (>= 3.5.0)
 Imports:
+    dplyr, 
+    readr, 
+    rlang, 
+    purrr
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
+RoxygenNote: 6.1.1
