More consistent handling of empty Data# columns, both C and other events

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,12 +2,19 @@
 
 export(airdas_process)
 export(airdas_read)
+export(airdas_sight)
 importFrom(dplyr,"%>%")
+importFrom(dplyr,.data)
+importFrom(dplyr,arrange)
+importFrom(dplyr,bind_rows)
+importFrom(dplyr,filter)
+importFrom(dplyr,left_join)
+importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(purrr,set_names)
 importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,fwf_positions)
 importFrom(readr,read_fwf)
-importFrom(rlang,.data)
 importFrom(utils,tail)
