Use !! to minimize .data calls. Created internal input check function

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,4 +19,5 @@ importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,fwf_positions)
 importFrom(readr,read_fwf)
+importFrom(rlang,"!!")
 importFrom(utils,tail)
