--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -9,7 +9,8 @@ Depends: R (>= 3.5.0)
 Imports:
     dplyr, 
     readr, 
-    purrr
+    purrr, 
+    rlang
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
