_copy function name seemed misleading; streamlines docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -2,7 +2,8 @@
 
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
-export(airdas_format_copy)
+export(airdas_effort)
+export(airdas_format_pdf)
 export(airdas_process)
 export(airdas_read)
 export(airdas_sight)
@@ -20,4 +21,5 @@ importFrom(readr,cols)
 importFrom(readr,fwf_positions)
 importFrom(readr,read_fwf)
 importFrom(rlang,"!!")
+importFrom(swfscMisc,distance)
 importFrom(utils,tail)
