Added airdas_effort and assocaited functions. Outputs match previous airdas work

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -3,6 +3,8 @@
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
 export(airdas_effort)
+export(airdas_effort_chop)
+export(airdas_effort_segdata)
 export(airdas_format_pdf)
 export(airdas_process)
 export(airdas_read)
@@ -10,16 +12,32 @@ export(airdas_sight)
 importFrom(dplyr,"%>%")
 importFrom(dplyr,.data)
 importFrom(dplyr,arrange)
+importFrom(dplyr,between)
+importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
+importFrom(dplyr,everything)
 importFrom(dplyr,filter)
+importFrom(dplyr,full_join)
+importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,summarise)
+importFrom(lubridate,day)
+importFrom(lubridate,month)
+importFrom(lubridate,year)
 importFrom(purrr,set_names)
 importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,fwf_positions)
 importFrom(readr,read_fwf)
 importFrom(rlang,"!!")
+importFrom(stats,na.omit)
+importFrom(stats,runif)
+importFrom(swfscMisc,bearing)
+importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
+importFrom(utils,head)
+importFrom(utils,read.csv)
 importFrom(utils,tail)
+importFrom(utils,write.csv)
