--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,5 +1,5 @@
 Package: swfscAirDAS
-Title: Aerial DAS Processing Functions for the Southwest Fisheries Science Center
+Title: Aerial DAS Data Processing Functions for the Southwest Fisheries Science Center
 Version: 0.0.0.9000
 Authors@R: person("Sam", "Woodman", email = "sam.woodman@noaa.gov", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6071-8186"))
 Description: What the package does (one paragraph).
@@ -8,9 +8,11 @@ BugReports: https://github.com/smwoodman/swfscAirDAS/issues
 Depends: R (>= 3.5.0)
 Imports:
     dplyr, 
+    lubridate, 
     readr, 
     purrr, 
-    rlang
+    rlang, 
+    swfscMisc
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
