--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -6,7 +6,7 @@ Description: Process and summarize aerial survey DAS (AirDAS)
     data collected using the Southwest Fisheries Science Center (SWFSC) 
     'turtle4d' program. AirDAS format requirements are described in the 
     ‘AirDAS_format’ vignette included in this package.
-URL: https://github.com/smwoodman/swfscAirDAS
+URL: https://smwoodman.github.io/swfscAirDAS, https://github.com/smwoodman/swfscAirDAS
 BugReports: https://github.com/smwoodman/swfscAirDAS/issues
 Depends: R (>= 3.5.0)
 Imports:
