--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -2,10 +2,9 @@ Package: swfscAirDAS
 Title: Aerial DAS Data Processing Functions for the Southwest Fisheries Science Center
 Version: 0.0.0.9000
 Authors@R: person("Sam", "Woodman", email = "sam.woodman@noaa.gov", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6071-8186"))
-Description: Process and summarize aerial survey DAS (AirDAS) 
-    data collected using the Southwest Fisheries Science Center (SWFSC) 
-    'turtle4d' program. AirDAS format requirements are described in the 
-    ‘AirDAS_format’ vignette included in this package.
+Description: Process and summarize aerial survey DAS (AirDAS) data collected using the 
+    Southwest Fisheries Science Center (SWFSC) 'turtle4d' program. 
+    A PDF with the AirDAS data format requirements is included in this package.
 URL: https://smwoodman.github.io/swfscAirDAS, https://github.com/smwoodman/swfscAirDAS
 BugReports: https://github.com/smwoodman/swfscAirDAS/issues
 Depends: R (>= 3.5.0)
