--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -11,12 +11,14 @@ Depends: R (>= 3.5.0)
 Imports:
     dplyr, 
     lubridate, 
+    methods,
     readr, 
     rlang, 
     swfscMisc
 Suggests: 
     knitr,
-    rmarkdown
+    rmarkdown,
+    testthat (>= 2.1.0)
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
