Removed mixed.multi(not applicable) and made airdas_effort an s3

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method("[<-",airdas_df)
 S3method("[<-",airdas_dfr)
 S3method("[[<-",airdas_df)
 S3method("[[<-",airdas_dfr)
+S3method(airdas_effort,airdas_df)
+S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
