Working on effort documentation - pre effort branch

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ S3method(as_airdas_df,airdas_df)
 S3method(as_airdas_df,data.frame)
 S3method(as_airdas_dfr,airdas_dfr)
 S3method(as_airdas_dfr,data.frame)
+export(airdas_chop_equal)
 export(airdas_effort)
-export(airdas_effort_chop)
 export(airdas_effort_segdata)
 export(airdas_format_pdf)
 export(airdas_process)
