--- a/NAMESPACE
+++ b/NAMESPACE
@@ -21,10 +21,10 @@ S3method(as_airdas_dfr,airdas_dfr)
 S3method(as_airdas_dfr,data.frame)
 export(airdas_chop_equal)
 export(airdas_effort)
-export(airdas_effort_segdata)
 export(airdas_format_pdf)
 export(airdas_process)
 export(airdas_read)
+export(airdas_segdata_avg)
 export(airdas_sight)
 export(as_airdas_df)
 export(as_airdas_dfr)
