Documenting and cleaning up segdata_avg

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -47,6 +47,7 @@ importFrom(dplyr,select)
 importFrom(dplyr,summarise)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
+importFrom(lubridate,tz)
 importFrom(lubridate,year)
 importFrom(methods,setOldClass)
 importFrom(readr,col_character)
