Made effort functions s3, aka requiring airdas_df objects

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,11 +8,15 @@ S3method("[<-",airdas_df)
 S3method("[<-",airdas_dfr)
 S3method("[[<-",airdas_df)
 S3method("[[<-",airdas_dfr)
+S3method(airdas_chop_equal,airdas_df)
+S3method(airdas_chop_equal,data.frame)
 S3method(airdas_effort,airdas_df)
 S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
+S3method(airdas_segdata_avg,airdas_df)
+S3method(airdas_segdata_avg,data.frame)
 S3method(airdas_sight,airdas_df)
 S3method(airdas_sight,data.frame)
 S3method(as_airdas_df,airdas_df)
