--- a/NAMESPACE
+++ b/NAMESPACE
@@ -23,6 +23,7 @@ S3method(as_airdas_df,airdas_df)
 S3method(as_airdas_df,data.frame)
 S3method(as_airdas_dfr,airdas_dfr)
 S3method(as_airdas_dfr,data.frame)
+export(airdas_check)
 export(airdas_chop_equal)
 export(airdas_effort)
 export(airdas_format_pdf)
