--- a/NAMESPACE
+++ b/NAMESPACE
@@ -8,6 +8,8 @@ S3method("[<-",airdas_df)
 S3method("[<-",airdas_dfr)
 S3method("[[<-",airdas_df)
 S3method("[[<-",airdas_dfr)
+S3method(airdas_chop_condition,airdas_df)
+S3method(airdas_chop_condition,data.frame)
 S3method(airdas_chop_equal,airdas_df)
 S3method(airdas_chop_equal,data.frame)
 S3method(airdas_effort,airdas_df)
@@ -24,6 +26,7 @@ S3method(as_airdas_df,data.frame)
 S3method(as_airdas_dfr,airdas_dfr)
 S3method(as_airdas_dfr,data.frame)
 export(airdas_check)
+export(airdas_chop_condition)
 export(airdas_chop_equal)
 export(airdas_effort)
 export(airdas_format_pdf)
@@ -62,6 +65,7 @@ importFrom(readr,read_fwf)
 importFrom(rlang,"!!")
 importFrom(stats,na.omit)
 importFrom(stats,runif)
+importFrom(stringr,str_locate_all)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
