--- a/NAMESPACE
+++ b/NAMESPACE
@@ -36,10 +36,6 @@ export(airdas_segdata_avg)
 export(airdas_sight)
 export(as_airdas_df)
 export(as_airdas_dfr)
-exportClasses(airdas_df)
-exportClasses(airdas_dfr)
-importFrom(dplyr,"%>%")
-importFrom(dplyr,.data)
 importFrom(dplyr,arrange)
 importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
@@ -57,17 +53,27 @@ importFrom(lubridate,day)
 importFrom(lubridate,month)
 importFrom(lubridate,tz)
 importFrom(lubridate,year)
-importFrom(methods,setOldClass)
+importFrom(magrittr,"%>%")
+importFrom(parallel,clusterExport)
+importFrom(parallel,detectCores)
+importFrom(parallel,parLapplyLB)
+importFrom(parallel,stopCluster)
 importFrom(readr,col_character)
 importFrom(readr,cols)
 importFrom(readr,fwf_positions)
 importFrom(readr,read_fwf)
 importFrom(rlang,"!!")
+importFrom(rlang,.data)
 importFrom(stats,na.omit)
 importFrom(stats,runif)
+importFrom(swfscDAS,.chop_condition_eff)
+importFrom(swfscDAS,.chop_equal_eff)
+importFrom(swfscDAS,.dist_from_prev)
+importFrom(swfscDAS,.fn.grcirclkm)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
+importFrom(swfscMisc,setupClusters)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,write.csv)
