--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -23,6 +23,8 @@ Suggests:
     knitr,
     rmarkdown,
     testthat (>= 2.1.0)
+Remotes:
+    smwoodman/swfscDAS
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
