Check a da docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -77,4 +77,5 @@ importFrom(swfscMisc,distance)
 importFrom(swfscMisc,setupClusters)
 importFrom(utils,head)
 importFrom(utils,read.csv)
+importFrom(utils,tail)
 importFrom(utils,write.csv)
