--- a/NAMESPACE
+++ b/NAMESPACE
@@ -12,6 +12,8 @@ S3method(airdas_chop_condition,airdas_df)
 S3method(airdas_chop_condition,data.frame)
 S3method(airdas_chop_equal,airdas_df)
 S3method(airdas_chop_equal,data.frame)
+S3method(airdas_chop_section,airdas_df)
+S3method(airdas_chop_section,data.frame)
 S3method(airdas_effort,airdas_df)
 S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
@@ -28,6 +30,7 @@ S3method(as_airdas_dfr,data.frame)
 export(airdas_check)
 export(airdas_chop_condition)
 export(airdas_chop_equal)
+export(airdas_chop_section)
 export(airdas_effort)
 export(airdas_format_pdf)
 export(airdas_process)
