--- a/NAMESPACE
+++ b/NAMESPACE
@@ -51,8 +51,10 @@ importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
 importFrom(dplyr,select)
+importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
 importFrom(dplyr,summarise)
+importFrom(dplyr,ungroup)
 importFrom(lubridate,day)
 importFrom(lubridate,month)
 importFrom(lubridate,tz)
