Use new swfscDAS internals

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -76,6 +76,9 @@ importFrom(swfscDAS,.chop_condition_eff)
 importFrom(swfscDAS,.chop_equal_eff)
 importFrom(swfscDAS,.dist_from_prev)
 importFrom(swfscDAS,.fn.grcirclkm)
+importFrom(swfscDAS,.fn_aggr_conditions)
+importFrom(swfscDAS,.process_chr)
+importFrom(swfscDAS,.process_num)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
