--- a/NAMESPACE
+++ b/NAMESPACE
@@ -19,8 +19,8 @@ S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
-S3method(airdas_segdata_avg,airdas_df)
-S3method(airdas_segdata_avg,data.frame)
+S3method(airdas_segdata,airdas_df)
+S3method(airdas_segdata,data.frame)
 S3method(airdas_sight,airdas_df)
 S3method(airdas_sight,data.frame)
 S3method(as_airdas_df,airdas_df)
@@ -35,7 +35,7 @@ export(airdas_effort)
 export(airdas_format_pdf)
 export(airdas_process)
 export(airdas_read)
-export(airdas_segdata_avg)
+export(airdas_segdata)
 export(airdas_sight)
 export(as_airdas_df)
 export(as_airdas_dfr)
@@ -76,9 +76,10 @@ importFrom(swfscDAS,.chop_condition_eff)
 importFrom(swfscDAS,.chop_equal_eff)
 importFrom(swfscDAS,.dist_from_prev)
 importFrom(swfscDAS,.fn.grcirclkm)
-importFrom(swfscDAS,.fn_aggr_conditions)
 importFrom(swfscDAS,.process_chr)
 importFrom(swfscDAS,.process_num)
+importFrom(swfscDAS,.segdata_aggr)
+importFrom(swfscDAS,.segdata_proc)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
