--- a/.travis.yml
+++ b/.travis.yml
@@ -12,8 +12,7 @@ warnings_are_errors: true
 jobs:
   include:
   - r: release
-    before_cache:
-    - Rscript -e 'remotes::install_cran("pkgdown")'
+    before_cache: Rscript -e 'remotes::install_cran("pkgdown")'
     deploy:
       provider: script
       script: Rscript -e 'pkgdown::deploy_site_github(verbose = TRUE)'
