Added function for extracting and concatenating comments. Added pertinent example stuff to airdas_sample.das

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -14,6 +14,9 @@ S3method(airdas_chop_equal,airdas_df)
 S3method(airdas_chop_equal,data.frame)
 S3method(airdas_chop_section,airdas_df)
 S3method(airdas_chop_section,data.frame)
+S3method(airdas_comments,airdas_df)
+S3method(airdas_comments,airdas_dfr)
+S3method(airdas_comments,data.frame)
 S3method(airdas_effort,airdas_df)
 S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
@@ -31,6 +34,7 @@ export(airdas_check)
 export(airdas_chop_condition)
 export(airdas_chop_equal)
 export(airdas_chop_section)
+export(airdas_comments)
 export(airdas_effort)
 export(airdas_format_pdf)
 export(airdas_process)
