Started on func for processing comments

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -22,6 +22,9 @@ S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
+S3method(airdas_process_comments,airdas_df)
+S3method(airdas_process_comments,airdas_dfr)
+S3method(airdas_process_comments,data.frame)
 S3method(airdas_segdata,airdas_df)
 S3method(airdas_segdata,data.frame)
 S3method(airdas_sight,airdas_df)
@@ -38,6 +41,7 @@ export(airdas_comments)
 export(airdas_effort)
 export(airdas_format_pdf)
 export(airdas_process)
+export(airdas_process_comments)
 export(airdas_read)
 export(airdas_segdata)
 export(airdas_sight)
