Completed comments processing function and docs; added comment data to sample das file

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -17,8 +17,10 @@ Imports:
     parallel,
     readr, 
     rlang, 
+    stringr,
     swfscDAS,
-    swfscMisc
+    swfscMisc, 
+    tidyr
 Suggests: 
     knitr,
     rmarkdown,
