--- a/NAMESPACE
+++ b/NAMESPACE
@@ -58,6 +58,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
 importFrom(dplyr,starts_with)
@@ -80,6 +81,8 @@ importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
 importFrom(stats,runif)
+importFrom(stringr,str_detect)
+importFrom(stringr,str_match_all)
 importFrom(swfscDAS,.chop_condition_eff)
 importFrom(swfscDAS,.chop_equal_eff)
 importFrom(swfscDAS,.dist_from_prev)
@@ -92,6 +95,7 @@ importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
 importFrom(swfscMisc,setupClusters)
+importFrom(tidyr,unnest)
 importFrom(utils,head)
 importFrom(utils,read.csv)
 importFrom(utils,tail)
