Vignette added, belated func name update

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -17,14 +17,14 @@ S3method(airdas_chop_section,data.frame)
 S3method(airdas_comments,airdas_df)
 S3method(airdas_comments,airdas_dfr)
 S3method(airdas_comments,data.frame)
+S3method(airdas_comments_process,airdas_df)
+S3method(airdas_comments_process,airdas_dfr)
+S3method(airdas_comments_process,data.frame)
 S3method(airdas_effort,airdas_df)
 S3method(airdas_effort,data.frame)
 S3method(airdas_process,airdas_dfr)
 S3method(airdas_process,character)
 S3method(airdas_process,data.frame)
-S3method(airdas_process_comments,airdas_df)
-S3method(airdas_process_comments,airdas_dfr)
-S3method(airdas_process_comments,data.frame)
 S3method(airdas_segdata,airdas_df)
 S3method(airdas_segdata,data.frame)
 S3method(airdas_sight,airdas_df)
@@ -38,10 +38,10 @@ export(airdas_chop_condition)
 export(airdas_chop_equal)
 export(airdas_chop_section)
 export(airdas_comments)
+export(airdas_comments_process)
 export(airdas_effort)
 export(airdas_format_pdf)
 export(airdas_process)
-export(airdas_process_comments)
 export(airdas_read)
 export(airdas_segdata)
 export(airdas_sight)
