Added ability to process Caretta comment-data.

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -52,6 +52,7 @@ importFrom(dplyr,between)
 importFrom(dplyr,bind_cols)
 importFrom(dplyr,bind_rows)
 importFrom(dplyr,case_when)
+importFrom(dplyr,distinct)
 importFrom(dplyr,everything)
 importFrom(dplyr,filter)
 importFrom(dplyr,full_join)
@@ -81,8 +82,10 @@ importFrom(rlang,"!!")
 importFrom(rlang,.data)
 importFrom(stats,na.omit)
 importFrom(stats,runif)
+importFrom(stringr,str_count)
 importFrom(stringr,str_detect)
 importFrom(stringr,str_match_all)
+importFrom(stringr,str_split)
 importFrom(swfscDAS,.chop_condition_eff)
 importFrom(swfscDAS,.chop_equal_eff)
 importFrom(swfscDAS,.dist_from_prev)
