Split summarizing included sightings by segment into another function. Cleaned up related docs

--- a/NAMESPACE
+++ b/NAMESPACE
@@ -40,6 +40,7 @@ export(airdas_chop_section)
 export(airdas_comments)
 export(airdas_comments_process)
 export(airdas_effort)
+export(airdas_effort_sight)
 export(airdas_format_pdf)
 export(airdas_process)
 export(airdas_read)
@@ -94,6 +95,7 @@ importFrom(swfscDAS,.process_chr)
 importFrom(swfscDAS,.process_num)
 importFrom(swfscDAS,.segdata_aggr)
 importFrom(swfscDAS,.segdata_proc)
+importFrom(swfscDAS,das_effort_sight)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
