--- a/NAMESPACE
+++ b/NAMESPACE
@@ -90,12 +90,12 @@ importFrom(stringr,str_split)
 importFrom(swfscDAS,.chop_condition_eff)
 importFrom(swfscDAS,.chop_equal_eff)
 importFrom(swfscDAS,.dist_from_prev)
-importFrom(swfscDAS,.fn.grcirclkm)
 importFrom(swfscDAS,.process_chr)
 importFrom(swfscDAS,.process_num)
 importFrom(swfscDAS,.segdata_aggr)
 importFrom(swfscDAS,.segdata_proc)
 importFrom(swfscDAS,das_effort_sight)
+importFrom(swfscDAS,distance_greatcircle)
 importFrom(swfscMisc,bearing)
 importFrom(swfscMisc,destination)
 importFrom(swfscMisc,distance)
