--- a/NAMESPACE
+++ b/NAMESPACE
@@ -10,8 +10,8 @@ S3method("[[<-",airdas_df)
 S3method("[[<-",airdas_dfr)
 S3method(airdas_chop_condition,airdas_df)
 S3method(airdas_chop_condition,data.frame)
-S3method(airdas_chop_equal,airdas_df)
-S3method(airdas_chop_equal,data.frame)
+S3method(airdas_chop_equallength,airdas_df)
+S3method(airdas_chop_equallength,data.frame)
 S3method(airdas_chop_section,airdas_df)
 S3method(airdas_chop_section,data.frame)
 S3method(airdas_comments,airdas_df)
@@ -35,7 +35,7 @@ S3method(as_airdas_dfr,airdas_dfr)
 S3method(as_airdas_dfr,data.frame)
 export(airdas_check)
 export(airdas_chop_condition)
-export(airdas_chop_equal)
+export(airdas_chop_equallength)
 export(airdas_chop_section)
 export(airdas_comments)
 export(airdas_comments_process)
@@ -60,6 +60,7 @@ importFrom(dplyr,full_join)
 importFrom(dplyr,group_by)
 importFrom(dplyr,left_join)
 importFrom(dplyr,mutate)
+importFrom(dplyr,n)
 importFrom(dplyr,right_join)
 importFrom(dplyr,select)
 importFrom(dplyr,slice)
@@ -88,7 +89,7 @@ importFrom(stringr,str_detect)
 importFrom(stringr,str_match_all)
 importFrom(stringr,str_split)
 importFrom(swfscDAS,.chop_condition_eff)
-importFrom(swfscDAS,.chop_equal_eff)
+importFrom(swfscDAS,.chop_equallength_eff)
 importFrom(swfscDAS,.dist_from_prev)
 importFrom(swfscDAS,.process_chr)
 importFrom(swfscDAS,.process_num)
