--- a/.travis.yml
+++ b/.travis.yml
@@ -21,6 +21,20 @@ matrix:
     # if you use bookdown or blogdown, replace "PKGDOWN" by the respective
     # capitalized term. This also might need to be done in tic.R
     - BUILD_PKGDOWN=true
+    
+    addons:
+  apt:
+    sources:
+      - sourceline: 'ppa:opencpu/jq'
+      - sourceline: 'ppa:ubuntugis/ubuntugis-unstable'
+      - sourceline: 'deb http://apt.postgresql.org/pub/repos/apt/ trusty-pgdg main'
+        key_url: 'https://www.postgresql.org/media/keys/ACCC4CF8.asc'
+    packages:
+      - libudunits2-dev
+      - libproj-dev
+      - libgeos-dev
+      - libgdal-dev
+      
 
 # Stages -----------------------------------------------------------------------
 
