--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -3,13 +3,14 @@ Title: Southwest Fisheries Science Center Aerial DAS Data Processing
 Version: 0.2.1
 Authors@R: 
     person("Sam", "Woodman", email = "sam.woodman@noaa.gov", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6071-8186"))
-Description: Process and summarize aerial survey 'DAS' 
-    <https://www.fisheries.noaa.gov/about/marine-mammal-and-turtle-division-southwest-fisheries-science-center> 
-    data (AirDAS) collected using an aerial survey program from the 
-    Southwest Fisheries Science Center (SWFSC).
+Description: Process and summarize aerial survey 'DAS' data (AirDAS) 
+    <https://swfsc.noaa.gov/publications/TM/SWFSC/NOAA-TM-NMFS-SWFSC-185.PDF>
+    collected using an aerial survey program from the 
+    Southwest Fisheries Science Center (SWFSC) 
+    <https://www.fisheries.noaa.gov/west-coast/science-data/california-current-marine-mammal-assessment-research>.
     PDF files detailing the relevant AirDAS data formats are included in this package.
-URL: https://smwoodman.github.io/swfscAirDAS, https://github.com/smwoodman/swfscAirDAS
-BugReports: https://github.com/smwoodman/swfscAirDAS/issues
+URL: https://smwoodman.github.io/swfscAirDAS/, https://github.com/smwoodman/swfscAirDAS/
+BugReports: https://github.com/smwoodman/swfscAirDAS/issues/
 Depends: R (>= 3.5.0)
 Imports:
     dplyr, 
