--- a/.travis.yml
+++ b/.travis.yml
@@ -3,7 +3,7 @@
 
 # OS ---------------------------------------------------------------------------
 os: linux
-dist: bionic
+# dist: bionic
 
 # meta -------------------------------------------------------------------------
 language: r
