--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -29,6 +29,8 @@ Suggests:
     rmarkdown,
     testthat (>= 2.1.0), 
     tibble
+Remotes:
+    smwoodman/swfscDAS
 License: GPL-3
 Encoding: UTF-8
 LazyData: true
