v bump to v0.3.1 dev. Update to apache 2, swfsc lingo

--- a/DESCRIPTION
+++ b/DESCRIPTION
@@ -1,6 +1,6 @@
 Package: swfscAirDAS
 Title: Southwest Fisheries Science Center Aerial DAS Data Processing
-Version: 0.3.0
+Version: 0.3.1.9000
 Authors@R: 
     person("Sam", "Woodman", email = "sam.woodman@noaa.gov", role = c("aut", "cre"), comment = c(ORCID = "0000-0001-6071-8186"))
 Description: Process and summarize aerial survey 'DAS' data (AirDAS) 
@@ -9,9 +9,9 @@ Description: Process and summarize aerial survey 'DAS' data (AirDAS)
     Southwest Fisheries Science Center (SWFSC) 
     <https://www.fisheries.noaa.gov/west-coast/science-data/california-current-marine-mammal-assessment-program>.
     PDF files detailing the relevant AirDAS data formats are included in this package.
-URL: https://smwoodman.github.io/swfscAirDAS/,
-    https://github.com/smwoodman/swfscAirDAS/
-BugReports: https://github.com/smwoodman/swfscAirDAS/issues/
+URL: https://swfsc.github.io/swfscAirDAS/,
+    https://github.com/swfsc/swfscAirDAS/
+BugReports: https://github.com/swfsc/swfscAirDAS/issues/
 Depends: R (>= 4.0.0)
 Imports:
     dplyr, 
@@ -31,7 +31,7 @@ Suggests:
     rmarkdown,
     testthat (>= 2.1.0), 
     tibble
-License: CC0
+License: Apache License (== 2)
 Encoding: UTF-8
 RoxygenNote: 7.2.3
 VignetteBuilder: knitr
